RESOLVED FIXED193688
IndexedDB: leak WebIDBConnectionToServer in layout tests
https://bugs.webkit.org/show_bug.cgi?id=193688
Summary IndexedDB: leak WebIDBConnectionToServer in layout tests
Sihui Liu
Reported 2019-01-22 14:56:08 PST
WebIDBConnectionToServer and IDBConnectionToServer ref each other and never get destroyed.
Attachments
Patch (5.48 KB, patch)
2019-01-22 14:59 PST, Sihui Liu
no flags
Archive of layout-test-results from ews104 for mac-highsierra-wk2 (2.77 MB, application/zip)
2019-01-22 16:04 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (2.59 MB, application/zip)
2019-01-22 17:05 PST, EWS Watchlist
no flags
Patch (7.91 KB, patch)
2019-01-23 13:15 PST, Sihui Liu
no flags
Patch (8.30 KB, patch)
2019-02-01 10:36 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-01-22 14:59:48 PST
Sihui Liu
Comment 2 2019-01-22 15:00:30 PST
Geoffrey Garen
Comment 3 2019-01-22 15:33:13 PST
Comment on attachment 359781 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=359781&action=review r=me > Source/WebCore/Modules/indexeddb/client/IDBConnectionToServer.h:149 > + WeakPtr<IDBConnectionToServerDelegate> m_delegate; What is the consequence when this pointer becomes null? Is that OK?
EWS Watchlist
Comment 4 2019-01-22 16:04:50 PST
Comment on attachment 359781 [details] Patch Attachment 359781 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10846166 New failing tests: http/tests/websocket/tests/hybi/no-subprotocol.html
EWS Watchlist
Comment 5 2019-01-22 16:04:51 PST
Created attachment 359796 [details] Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6 2019-01-22 17:05:41 PST
Comment on attachment 359781 [details] Patch Attachment 359781 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10846668 New failing tests: http/tests/websocket/tests/hybi/no-subprotocol.html
EWS Watchlist
Comment 7 2019-01-22 17:05:42 PST
Created attachment 359814 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Sihui Liu
Comment 8 2019-01-23 13:15:51 PST
Sihui Liu
Comment 9 2019-01-23 17:10:04 PST
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 359781 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=359781&action=review > > r=me > > > Source/WebCore/Modules/indexeddb/client/IDBConnectionToServer.h:149 > > + WeakPtr<IDBConnectionToServerDelegate> m_delegate; > > What is the consequence when this pointer becomes null? Is that OK? If m_delegate is null, it means NetworkProcessConnection derefs WebIDBConnectionToServer and WebIDBConnectionToServer goes away. Before NetworkProcessConnection clears the ref to WebIDBConnectionToServer, it calls connectionToServerLost on IDBConnectionToServer and sets m_serverConnectionIsValid to true. If m_serverConnectionIsValid is true, m_delegate won't be used. So if m_delegate is null, it will not be called.
Sihui Liu
Comment 10 2019-02-01 10:36:21 PST
Geoffrey Garen
Comment 11 2019-02-01 13:15:37 PST
Comment on attachment 360872 [details] Patch r=me
WebKit Commit Bot
Comment 12 2019-02-04 10:51:26 PST
Comment on attachment 360872 [details] Patch Clearing flags on attachment: 360872 Committed r240931: <https://trac.webkit.org/changeset/240931>
WebKit Commit Bot
Comment 13 2019-02-04 10:51:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.